--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,28 +10,22 @@
 
 
         <activity
-            android:name=".Activity_login"
-            android:label="@string/title_activity_login"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-
-        </activity>
-        <activity
-            android:name=".Activity_reg"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".Activity_feed"
-            android:label="@string/app_name" >
+            android:name=".Activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <activity android:name=".Activity_preferences" >
         </activity>
         <activity
-            android:name=".Activity_profile"
-            android:label="@string/app_name" >
+            android:name=".Activity_reg">
+        </activity>
+        <activity
+            android:name=".Activity_feed">
+        </activity>
+        <activity
+            android:name=".Activity_profile">
         </activity>
 
         <meta-data
