--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,18 @@
 
         <activity
             android:name=".Activity_login">
+
+        </activity>
+        <activity android:name=".activity_preferences" >
+        </activity>
+        <activity
+            android:name=".Activity_feed">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".Activity_preferences" >
-        </activity>
-        <activity
-            android:name=".Activity_reg">
-        </activity>
-        <activity
-            android:name=".Activity_feed">
+
         </activity>
         <activity
             android:name=".Activity_profile">
