nombre, precio y descripcion en el feed desde la transicion de la camara(layout activo transicion cambiar si es necesario)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,20 @@
         <activity
             android:name=".Activity_feed">
 
+
+
+        </activity>
+        <activity
+            android:name=".Activity_profile">
+        </activity>
+
+        <activity
+            android:name=".Activity_transition">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-        </activity>
-        <activity
-            android:name=".Activity_profile">
         </activity>
 
         <meta-data
